--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="socials-row">
       <a [routerLink]="['/parking-state']" title="Use Google">
-        <img src="./../../../assets/images/google.png" alt="Sign in with Google"/>
+        <img src="./../../../assets/images/google.jpeg" alt="Sign in with Google"/>
         Sign in with Google
       </a>
       <a [routerLink]="['/parking-state']" title="Use Apple">
