--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,1 +1,30 @@
-<p>reports works!</p>
+<main class="flex-column-center">
+  <table>
+      <thead>
+          <td>Nº</td>
+          <td>Fecha</td>
+          <td>Cobrado</td>
+      </thead>
+      <tbody>
+          @for (transaction of this.dataGarageService.lastTransactions; track $index) {
+              <tr>
+                  <td> {{ $index + 1 }} </td>
+                  <td>
+                      @if (transaction.entryHour) {
+                          {{ transaction.exitHour }}
+                      } @else {
+                          -
+                      }
+                  </td>
+                  <td>
+                      @if (transaction.cost) {
+                          {{ transaction.cost }}
+                      } @else {
+                          -
+                      }
+                  </td>
+              </tr>
+          }
+      </tbody>
+  </table>
+</main>
