--- a/src/app/pages/rates/rates.component.html
+++ b/src/app/pages/rates/rates.component.html
@@ -11,8 +11,8 @@
         @for (rate of dataRatesService.rates; track $index) {
         <tr>
           <td>{{ rate.id }}</td>
-          <td>{{ rate.description }}</td>
-          <td>${{ rate.value }}</td>
+          <td>{{ rate.descripcion }}</td>
+          <td>${{ rate.valor }}</td>
 
           <td>
             <div class="actions-container">
