--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,11 +6,11 @@
       </div>
     </div>
     <div class="socials-row">
-      <a [routerLink]="['/parking-state']" title="Use Google">
+      <a title="Use Google">
         <img src="./../../../assets/images/google.jpeg" alt="Sign in with Google"/>
         Sign in with Google
       </a>
-      <a [routerLink]="['/parking-state']" title="Use Apple">
+      <a title="Use Apple">
         <img src="./../../../assets/images/apple.png" alt="Sign in with Apple"/>
         Sign in with Apple
       </a>
