--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,7 +10,7 @@
         <div class="column">
           <div class="text-field">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your Name" ngModel required/>
+            <input type="text" id="name" name="nombre" placeholder="Your Name" ngModel required/>
           </div>
           <div class="text-field">
             <label for="username">Username</label>
@@ -24,7 +24,7 @@
         <div class="column">
           <div class="text-field">
             <label for="lastName">Last Name (Optional)</label>
-            <input type="text" id="lastName" name="lastName" placeholder="Your Last Name" ngModel required/>
+            <input type="text" id="lastName" name="apellido" placeholder="Your Last Name" ngModel required/>
           </div>
           <div class="text-field">
             <label for="gender">Select Gender</label>
