--- a/Public/styles/colors.scss
+++ b/Public/styles/colors.scss
@@ -41,5 +41,5 @@ $inverted-font-color: #000;
 $success-color: rgb(23, 216, 23);
 $warning-color: rgb(219, 24, 24);
 $bg-color: #fff;
-$available-color: greenyellow;
+$available-color: rgb(23, 216, 23);
 $occupied-color: rgb(54, 106, 183);    
