--- a/src/app/pages/dashboard-container/dashboard-container.component.html
+++ b/src/app/pages/dashboard-container/dashboard-container.component.html
@@ -6,8 +6,7 @@
       <a [routerLink]="['/reports']" routerLinkActive="link-activo" draggable="false">Reports</a>
       }
       <a [routerLink]="['/parking-state']" draggable="false">Parking State</a>
-      <a [routerLink]="['/rates']" draggable="false">Prices</a>
-      <a [routerLink]="['/user']" draggable="false">User</a>
+      <a [routerLink]="['/rates']" draggable="false">Rates</a>
       <a [routerLink]="['/login']" draggable="false">Log out</a>
     </nav>
   </header>
