--- a/src/app/pages/reports/reports.component.scss
+++ b/src/app/pages/reports/reports.component.scss
@@ -1,9 +1,2 @@
-@use "../../../../Public/styles/tables.scss";
+@use "./../../../../Public/styles/tables.scss";
 
-h1{
-    color: red;
-}
-
-#agregar-cochera{
-    margin: auto;
-}
