--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,27 +1,27 @@
 <main>
+  <div class="table-container">
   <table>
     <thead>
-      <td>Nº</td>
+      <td>Cochera</td>
+      <td>Patente</td>
       <td>Fecha</td>
       <td>Cobrado</td>
     </thead>
     <tbody>
-      @for (transaccion of this.dataGarageService.ultimasTransacciones; track
-      $index) {
+      @for (transaccion of this.dataGarageService.ultimasTransacciones; track $index) {
       <tr>
-        <td>{{ $index + 1 }}</td>
-        <td>
-          @if (transaccion.horaIngreso) {
-          {{ transaccion.horaEgreso }}
-          } @else { - }
-        </td>
-        <td>
-          @if (transaccion.costo) {
-          {{ transaccion.costo }}
-          } @else { - }
+        <td>{{ transaccion.idCochera }}</td>
+        <td>{{ transaccion.patente }}</td>
+        <td> @if (transaccion.horaIngreso) {
+          {{ transaccion.horaEgreso | date:'dd/MM/yyyy' }}
+        } @else { - }</td>
+        <td>@if (transaccion.costo) {
+          {{ transaccion.costo | currency }}
+        } @else { - }
         </td>
       </tr>
       }
     </tbody>
   </table>
+</div>
 </main>
